update models and forms

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -96,10 +96,10 @@
                                 <a class="nav-link" href="@Url.Action("Index", "DangKyXetTuyenThang")">
                                     Phương thức 4
                                 </a>
-                                <a class="nav-link" href="@Url.Action("Index", "Khoas")">
+                                <a class="nav-link" href="@Url.Action("Ielts", "DangKyXetTuyenKhac")">
                                     Phương thức 5
                                 </a>
-                                <a class="nav-link" href="@Url.Action("Index", "Khoas")">
+                                <a class="nav-link" href="@Url.Action("DanhGia", "DangKyXetTuyenKhac")">
                                     Phương thức 6
                                 </a>
                             </nav>
