--- a/Views/LienCapTieuHocs/Create.cshtml
+++ b/Views/LienCapTieuHocs/Create.cshtml
@@ -355,13 +355,12 @@
 
         console.log('@TempData["Result"]')
         if ('@TempData["Result"]' == "THANHCONG") {
-            toastr.success('Thành công, Đăng ký thông tin thành công! Vui lòng xác thực lại thông tin đã gửi đến email');
+            //toastr.success('Thành công, Đăng ký thông tin thành công! Vui lòng xác thực lại thông tin đã gửi đến email');
             resetForm();
+        } else if ('@TempData["Result"]' == "THATBAI") {
+            toastr.error('Thất bại, Đăng ký thông tin thất bại! Vui lòng kiểm tra lại thông tin và liên hệ với quản trị viên!');
         }
     });
-
-
-
 
     var formdataHocSinh_MinhChungMN = new FormData(); //FormData object
     var formdataHocSinh_MinhChungGiayKS = new FormData(); //FormData object
@@ -378,7 +377,7 @@
 
         $('#HocSinh_DinhDanh').val("");
         $('#HocSinh_HoTen').val("");
-        $('#HocSinh_GioiTinh').val("3");
+        $('#HocSinh_GioiTinh').val("0");
         $('#datepicker').val("");
         $('#HocSinh_NoiSinh').val("");
         $('#HocSinh_Email').val("");
@@ -656,6 +655,24 @@
         } else {
             $("#FilesList_HocSinh_MinhChungLePhi").css("visibility", "hidden");
         }
+    }
+    if (window.history.replaceState) {
+        window.history.replaceState(null, null, window.location.href);
+    }
+    // Kiểm tra nếu biểu mẫu đã được gửi
+    if (window.history && window.history.pushState) {
+        window.addEventListener('load', function () {
+            // Lưu trạng thái hiện tại của trang vào trong history state
+            window.history.pushState({ isFormSubmitted: true }, '');
+        });
+
+        window.addEventListener('popstate', function (event) {
+            // Kiểm tra nếu trạng thái popstate là biểu mẫu đã được gửi
+            if (event.state && event.state.isFormSubmitted) {
+                // Không làm gì nếu biểu mẫu đã được gửi
+                return;
+            }
+        });
     }
 
 
