--- a/Views/LienCapTieuHocs/ConfirmRegister.cshtml
+++ b/Views/LienCapTieuHocs/ConfirmRegister.cshtml
@@ -35,10 +35,10 @@
                 success: function (response) {
                     if (response.success) {
                         $('#resultMessage1').text("Đăng ký xét tuyển vào lớp 1")
-                        $('#resultMessage2').text("Xin vui lòng xác thực lại thông tin đăng ký đã gửi đến email")
+                        $('#resultMessage2').text("Xin vui lòng xác thực lại thông tin đăng ký đã gửi đến email.")
                         $('#resultButton').prop('disabled', false);
                     } else {
-                        $('#resultMessage3').text("Trang không tồn tại! Vui lòng quay lại trang chủ");
+                        $('#resultMessage3').text("Trang không tồn tại! Vui lòng quay lại trang chủ.");
                     }
                 },
                 error: function (xhr, status, error) {
